add a balance pages

--- a/mini-project.html
+++ b/mini-project.html
@@ -25,10 +25,10 @@
       <div class="header_menu_container">
         <div class="clear"></div>
         <ul class="header_menu horizontal_list">
-          <li><a class="no_border active" href="#">Profile</a></li>
+          <li><a class="no_border" href="./index.html">Profile</a></li>
           <li><a href="./education.html">Education</a></li>
           <li><a href="./skills.html">Skills</a></li>
-          <li><a href="./mini-project.html">Mini Project</a></li>
+          <li><a class="active" href="#">Mini Project</a></li>
         </ul>
       </div>
     </div>
