--- a/education.html
+++ b/education.html
@@ -26,8 +26,8 @@
                 <div class="clear"></div>
                 <ul class="header_menu horizontal_list">
                     <li><a class="no_border" href="./index.html">Profile</a></li>
-                    <li><a href="./education.html">Education</a></li>
-                    <li><a class="purple" href="#">Skills</a></li>
+                    <li><a class="active" href="#">Education</a></li>
+                    <li><a href=" ./skills.html">Skills</a></li>
                     <li><a href="./mini-project.html">Mini Project</a></li>
                 </ul>
             </div>
@@ -35,9 +35,11 @@
         <!-- LEFT COL -->
         <div id="left_col">
             <div class="profile_frame">
-
-                <img class="profile_picture" src="./profile_image.jpg" />
-
+                <div class="profile_frame">
+                    <img class="profile_picture" src="./profile_image.jpg" />
+                    <!-- <img src="images/javier_latorre.jpg" alt="profile picture"> -->
+                </div>
+                <div class="profile_picture"></div>
                 <!-- <img src="images/javier_latorre.jpg" alt="profile picture"> -->
             </div>
             <div class="hello_content">
@@ -50,15 +52,15 @@
             <div class="contact_details_content">
                 <h2>Contact details</h2>
                 <p class="purple">Phone:</p>
-                <p>+34 123 456 789</p>
+                <p>+9788552812</p>
                 <p class="purple">Email:</p>
-                <p>jlalovi@gmail.com</p>
+                <p>monikavini8864@gmail.com</p>
                 <p class="purple">Adress:</p>
-                <p>Someplace, 5</p>
-                <p>Jaén, Spain</p>
-                <p>23001</p>
+                <p>No.6,Thoppu street,</p>
+                <p>Thirunageswaram, Kumbakonam</p>
+                <p>612204</p>
             </div>
-            <a href="mailto:jlalovi@gmail.com" class="send_message_button">
+            <a class="send_message_button">
                 <span class="cut1"></span>
                 <span class="cut2"></span>
                 <span class="content">Download CV <span class="fontawesome-double-angle-right"></span></span>
@@ -71,22 +73,21 @@
                     <li><a class="linkedin" href="https://www.linkedin.com/in/jlalovi/en"><span
                                 class="entypo-linkedin-circled"></span><span class="invisible">LinkedIn</span></a></li>
                 </ul>
+                <br />
             </div>
         </div>
         <!-- PROFILE CONTENT -->
         <div id="content_container">
-            <div class="block">
-                <h1>Skills</h1>
-                <blockquote class="profile_quote">
-                    <p>"There is no end to education. It is not that you read a book, pass an examination, and finish
-                        with
-                        education. The whole of life, from the moment you are born to the moment you die, is a process
-                        of learning."
-                    </p>
-                    <p>Jiddu Krishnamurti.</p>
-                    <span class="entypo-quote"></span>
-                </blockquote>
-            </div>
+            <!-- <div class="block">
+        <h1>Profile</h1>
+        <blockquote class="profile_quote">
+          <p>"There is no end to education. It is not that you read a book, pass an examination, and finish with
+            education. The whole of life, from the moment you are born to the moment you die, is a process of learning."
+          </p>
+          <p>Jiddu Krishnamurti.</p>
+          <span class="entypo-quote"></span>
+        </blockquote>
+      </div>-->
             <div class="block">
                 <h2>A few words about me</h2>
                 <p>Until now, in my life, I change from active moments with a lot of variety, challenges and
@@ -141,18 +142,13 @@
                 <ul>
                     <li>Visiting new places</li>
                     <li>Meeting people</li>
-                    <li>Having new experiences</li>
-                    <li>Hiking and Biking</li>
-                    <li>Web Developing</li>
-                    <li>Computer Gamming</li>
-                    <li>Manga and Anime</li>
                 </ul>
             </div>
         </div>
-        <div class="clear"></div>
+        <!-- <div class="clear"></div> -->
         <!-- FOOTER -->
         <div id="footer">
-            <p class="footer_name">Javier Latorre CV 2015</p>
+            <p class="footer_name">Vinitha Nagarajan CV 2020</p>
         </div>
     </div>
 </body>
