--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
       </div>
       <div class="hello_content">
         <h2>Hello!</h2>
-        <p>I'm passionate about technology and human behavior, hardworker and a fast-learner with experience in around
-          10
-          different countries studying, working and volunteering.</p>
+        <p>I'm looking for a challenging startup-like environment that provides me with a good opportunity for learning and advancement.
+        </p>
       </div>
       <div class="contact_details_content">
         <h2>Contact details</h2>
@@ -89,11 +88,8 @@
       </div>-->
       <div class="block">
         <h2>A few words about me</h2>
-        <p>Until now, in my life, I change from active moments with a lot of variety, challenges and improvisations, to
-          moments of tranquility and stability, being difficult to stay in a place during a long time. I consider myself
-          a
-          tolerant and respectful person with open mind and quite honest. I really like to listen people stories and
-          backgrounds and their different experiences around the world.</p>
+        <p>I'm passionate about speak and then hardworker and a fast-learner with a new technology.
+           I consider myself a tolerant and respectful person with open mind and quite honest...</p>
       </div>
       <div class="horizontal_line">
         <div class="line_left"></div>
@@ -102,7 +98,7 @@
         <div class="right_circle"></div>
         <div class="line_right"></div>
       </div>
-      <div class="block">
+     <!-- <div class="block">
         <h2>Philosophy</h2>
         <p>I belive in ethic and moral not in imposed rules that you "have to" do or follow.</p>
         <div class="philosophy_content">
@@ -127,7 +123,7 @@
         <div class="central_circle"></div>
         <div class="right_circle"></div>
         <div class="line_right"></div>
-      </div>
+      </div>-->
       <div class="last block">
         <h2>Interests & Hobbies</h2>
         <p>I'm passionate about technology and human behavior, both determine almost all my interests and hobbies:</p>
