--- a/education.html
+++ b/education.html
@@ -44,10 +44,7 @@
             </div>
             <div class="hello_content">
                 <h2>Hello!</h2>
-                <p>I'm passionate about technology and human behavior, hardworker and a fast-learner with experience in
-                    around
-                    10
-                    different countries studying, working and volunteering.</p>
+                <p>I'm looking for a challenging startup-like environment that provides me with a good opportunity for learning and advancement.</p>
             </div>
             <div class="contact_details_content">
                 <h2>Contact details</h2>
@@ -78,26 +75,33 @@
         </div>
         <!-- PROFILE CONTENT -->
         <div id="content_container">
-            <!-- <div class="block">
-        <h1>Profile</h1>
-        <blockquote class="profile_quote">
-          <p>"There is no end to education. It is not that you read a book, pass an examination, and finish with
-            education. The whole of life, from the moment you are born to the moment you die, is a process of learning."
-          </p>
-          <p>Jiddu Krishnamurti.</p>
-          <span class="entypo-quote"></span>
-        </blockquote>
-      </div>-->
             <div class="block">
-                <h2>A few words about me</h2>
-                <p>Until now, in my life, I change from active moments with a lot of variety, challenges and
-                    improvisations, to
-                    moments of tranquility and stability, being difficult to stay in a place during a long time. I
-                    consider myself
-                    a
-                    tolerant and respectful person with open mind and quite honest. I really like to listen people
-                    stories and
-                    backgrounds and their different experiences around the world.</p>
+        <h1>A few words about me</h1>
+        <p>I'm passionate about speak and then hardworker and a fast-learner with a new technology.
+           I consider myself a tolerant and respectful person with open mind and quite honest...</p>
+      </div>
+      <div class="horizontal_line">
+        <div class="line_left"></div>
+        <div class="left_circle"></div>
+        <div class="central_circle"></div>
+        <div class="right_circle"></div>
+        <div class="line_right"></div>
+      </div>
+            <div class="block">
+                <h2>Education Details</h2>
+                <p>B.TECH IT / 68% 
+                	<br/><br/>
+                	I have completed my degree on Anjalai Ammal Mahalingam Engineering  College in the year 2019  at Kovilvenni.
+                	<br/><br/>
+                	HSC / 80%
+                	<br/><br/>
+                	I have completed my schooling on St. Joseph’s. Girl’s. Hr. Sec. School in the year 2015 at Kumbakonam.
+					<br/><br/>
+					SSLC / 91%
+ 					<br/><br/>
+ 					I have completed my schooling on St. Joseph’s. Girl’s .Hr. Sec. School in the year 2013 at Kumbakonam.
+
+                </p>
             </div>
             <div class="horizontal_line">
                 <div class="line_left"></div>
@@ -106,7 +110,7 @@
                 <div class="right_circle"></div>
                 <div class="line_right"></div>
             </div>
-            <div class="block">
+            <!--<div class="block">
                 <h2>Philosophy</h2>
                 <p>I belive in ethic and moral not in imposed rules that you "have to" do or follow.</p>
                 <div class="philosophy_content">
@@ -134,7 +138,7 @@
                 <div class="central_circle"></div>
                 <div class="right_circle"></div>
                 <div class="line_right"></div>
-            </div>
+            </div>-->
             <div class="last block">
                 <h2>Interests & Hobbies</h2>
                 <p>I'm passionate about technology and human behavior, both determine almost all my interests and
@@ -142,6 +146,7 @@
                 <ul>
                     <li>Visiting new places</li>
                     <li>Meeting people</li>
+                    <li>Cooking & Eating</li>
                 </ul>
             </div>
         </div>
