--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         <ul>
           <li>Visiting new places</li>
           <li>Meeting people</li>
+           <li>Cooking & Eating</li>
         </ul>
       </div>
     </div>
