--- a/mini-project.html
+++ b/mini-project.html
@@ -44,9 +44,7 @@
       </div>
       <div class="hello_content">
         <h2>Hello!</h2>
-        <p>I'm passionate about technology and human behavior, hardworker and a fast-learner with experience in around
-          10
-          different countries studying, working and volunteering.</p>
+        <p>I'm looking for a challenging startup-like environment that provides me with a good opportunity for learning and advancement.</p>
       </div>
       <div class="contact_details_content">
         <h2>Contact details</h2>
@@ -65,11 +63,11 @@
         <span class="content">Download CV <span class="fontawesome-double-angle-right"></span></span>
       </a>
       <div class="get_social_content">
-        <h2>Get social</h2>
+        <h2>Get social</h2> 
         <ul class="social_icons horizontal_list">
-          <li><a class="facebook" href="https://www.facebook.com/jlalovi"><span
+          <li><a class="facebook" href="https://www.facebook.com/monika.monu.39501"><span
                 class="entypo-facebook-circled"></span><span class="invisible">Facebook</span></a></li>
-          <li><a class="linkedin" href="https://www.linkedin.com/in/jlalovi/en"><span
+          <li><a class="linkedin" href="https://www.linkedin.com/in/monika-vini-a93a76146"><span
                 class="entypo-linkedin-circled"></span><span class="invisible">LinkedIn</span></a></li>
         </ul>
         <br />
@@ -77,23 +75,10 @@
     </div>
     <!-- PROFILE CONTENT -->
     <div id="content_container">
-      <!-- <div class="block">
-        <h1>Profile</h1>
-        <blockquote class="profile_quote">
-          <p>"There is no end to education. It is not that you read a book, pass an examination, and finish with
-            education. The whole of life, from the moment you are born to the moment you die, is a process of learning."
-          </p>
-          <p>Jiddu Krishnamurti.</p>
-          <span class="entypo-quote"></span>
-        </blockquote>
-      </div>-->
       <div class="block">
-        <h2>A few words about me</h2>
-        <p>Until now, in my life, I change from active moments with a lot of variety, challenges and improvisations, to
-          moments of tranquility and stability, being difficult to stay in a place during a long time. I consider myself
-          a
-          tolerant and respectful person with open mind and quite honest. I really like to listen people stories and
-          backgrounds and their different experiences around the world.</p>
+      <h1>A few words about me</h1>
+        <p>I'm passionate about speak and then hardworker and a fast-learner with a new technology.
+           I consider myself a tolerant and respectful person with open mind and quite honest...</p>
       </div>
       <div class="horizontal_line">
         <div class="line_left"></div>
@@ -103,6 +88,29 @@
         <div class="line_right"></div>
       </div>
       <div class="block">
+        <h2>Mini Project Experience</h2>
+        <p> <b>WEB BASED CHAT APPLICATION</b>
+          <br/><br/>
+              This project is similar to social website, here we developed to make conversation among end-user with simple UI/UX.
+            <br/><br/>
+              Technologies used: Angular, Node.js, Express.js and MongoDB
+            <br/><br/>
+            <b>JOB APPLICATION</b>
+             <br/><br/>
+              Form registration regarding to success mail notification for the user
+              and the application owner.
+              <br/><br/>
+              Technologies used: Asp.Net, MySql
+</p>
+      </div>
+      <div class="horizontal_line">
+        <div class="line_left"></div>
+        <div class="left_circle"></div>
+        <div class="central_circle"></div>
+        <div class="right_circle"></div>
+        <div class="line_right"></div>
+      </div>
+      <!--<div class="block">
         <h2>Philosophy</h2>
         <p>I belive in ethic and moral not in imposed rules that you "have to" do or follow.</p>
         <div class="philosophy_content">
@@ -127,13 +135,14 @@
         <div class="central_circle"></div>
         <div class="right_circle"></div>
         <div class="line_right"></div>
-      </div>
+      </div>-->
       <div class="last block">
         <h2>Interests & Hobbies</h2>
         <p>I'm passionate about technology and human behavior, both determine almost all my interests and hobbies:</p>
         <ul>
           <li>Visiting new places</li>
           <li>Meeting people</li>
+           <li>Cooking & Eating</li>
         </ul>
       </div>
     </div>
