--- a/skills.html
+++ b/skills.html
@@ -42,23 +42,20 @@
             </div>
             <div class="hello_content">
                 <h2>Hello!</h2>
-                <p>I'm passionate about technology and human behavior, hardworker and a fast-learner with experience in
-                    around
-                    10
-                    different countries studying, working and volunteering.</p>
+                <p>I'm looking for a challenging startup-like environment that provides me with a good opportunity for learning and advancement.</p>
             </div>
             <div class="contact_details_content">
                 <h2>Contact details</h2>
                 <p class="purple">Phone:</p>
-                <p>+34 123 456 789</p>
+                <p>+9788552812</p>
                 <p class="purple">Email:</p>
-                <p>jlalovi@gmail.com</p>
+                <p>monikavini8864@gmail.com</p>
                 <p class="purple">Adress:</p>
-                <p>Someplace, 5</p>
-                <p>Jaén, Spain</p>
-                <p>23001</p>
+                <p>No.6,Thoppu street,</p>
+                <p>Thirunageswaram, Kumbakonam</p>
+                <p>612204</p>
             </div>
-            <a href="mailto:jlalovi@gmail.com" class="send_message_button">
+            <a class="send_message_button">
                 <span class="cut1"></span>
                 <span class="cut2"></span>
                 <span class="content">Download CV <span class="fontawesome-double-angle-right"></span></span>
@@ -76,27 +73,29 @@
         <!-- PROFILE CONTENT -->
         <div id="content_container">
             <div class="block">
-                <h1>Skills</h1>
-                <blockquote class="profile_quote">
-                    <p>"There is no end to education. It is not that you read a book, pass an examination, and finish
-                        with
-                        education. The whole of life, from the moment you are born to the moment you die, is a process
-                        of learning."
-                    </p>
-                    <p>Jiddu Krishnamurti.</p>
-                    <span class="entypo-quote"></span>
-                </blockquote>
-            </div>
+           <h1>A few words about me</h1>
+        <p>I'm passionate about speak and then hardworker and a fast-learner with a new technology.
+           I consider myself a tolerant and respectful person with open mind and quite honest...</p>
+      </div>
+      <div class="horizontal_line">
+        <div class="line_left"></div>
+        <div class="left_circle"></div>
+        <div class="central_circle"></div>
+        <div class="right_circle"></div>
+        <div class="line_right"></div>
+      </div>
             <div class="block">
-                <h2>A few words about me</h2>
-                <p>Until now, in my life, I change from active moments with a lot of variety, challenges and
-                    improvisations, to
-                    moments of tranquility and stability, being difficult to stay in a place during a long time. I
-                    consider myself
-                    a
-                    tolerant and respectful person with open mind and quite honest. I really like to listen people
-                    stories and
-                    backgrounds and their different experiences around the world.</p>
+                <h2>Soft skill</h2>
+                <p>
+					 Languages      : C, Java
+                <br/><br/>
+					 Tools          : Visual Studio
+                <br/><br/>
+					 Database       :  MySql
+		        <br/><br/>
+					 Software Stack : MEAN , ASP.NET
+
+				</p>
             </div>
             <div class="horizontal_line">
                 <div class="line_left"></div>
@@ -105,7 +104,7 @@
                 <div class="right_circle"></div>
                 <div class="line_right"></div>
             </div>
-            <div class="block">
+            <!--<div class="block">
                 <h2>Philosophy</h2>
                 <p>I belive in ethic and moral not in imposed rules that you "have to" do or follow.</p>
                 <div class="philosophy_content">
@@ -133,7 +132,7 @@
                 <div class="central_circle"></div>
                 <div class="right_circle"></div>
                 <div class="line_right"></div>
-            </div>
+            </div>-->
             <div class="last block">
                 <h2>Interests & Hobbies</h2>
                 <p>I'm passionate about technology and human behavior, both determine almost all my interests and
@@ -141,11 +140,7 @@
                 <ul>
                     <li>Visiting new places</li>
                     <li>Meeting people</li>
-                    <li>Having new experiences</li>
-                    <li>Hiking and Biking</li>
-                    <li>Web Developing</li>
-                    <li>Computer Gamming</li>
-                    <li>Manga and Anime</li>
+                    <li>Cooking & Eating</li>
                 </ul>
             </div>
         </div>
