--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
       <div class="get_social_content">
         <h2>Get social</h2>
         <ul class="social_icons horizontal_list">
-          <li><a class="facebook" href="https://www.facebook.com/jlalovi"><span
+          <li><a class="facebook" href="https://www.facebook.com/monika.monu.39501"><span
                 class="entypo-facebook-circled"></span><span class="invisible">Facebook</span></a></li>
-          <li><a class="linkedin" href="https://www.linkedin.com/in/jlalovi/en"><span
+          <li><a class="linkedin" href="https://www.linkedin.com/in/monika-vini-a93a76146"><span
                 class="entypo-linkedin-circled"></span><span class="invisible">LinkedIn</span></a></li>
         </ul>
         <br />
