--- a/skills.html
+++ b/skills.html
@@ -26,8 +26,8 @@
                 <div class="clear"></div>
                 <ul class="header_menu horizontal_list">
                     <li><a class="no_border" href="./index.html">Profile</a></li>
-                    <li><a class="active" href="#">Education</a></li>
-                    <li><a href=" ./skills.html">Skills</a></li>
+                    <li><a href="./education.html">Education</a></li>
+                    <li><a class="purple" href="#">Skills</a></li>
                     <li><a href="./mini-project.html">Mini Project</a></li>
                 </ul>
             </div>
@@ -35,11 +35,9 @@
         <!-- LEFT COL -->
         <div id="left_col">
             <div class="profile_frame">
-                <div class="profile_frame">
-                    <img class="profile_picture" src="./profile_image.jpg" />
-                    <!-- <img src="images/javier_latorre.jpg" alt="profile picture"> -->
-                </div>
-                <div class="profile_picture"></div>
+
+                <img class="profile_picture" src="./profile_image.jpg" />
+
                 <!-- <img src="images/javier_latorre.jpg" alt="profile picture"> -->
             </div>
             <div class="hello_content">
@@ -70,38 +68,34 @@
                     <li><a class="linkedin" href="https://www.linkedin.com/in/monika-vini-a93a76146"><span
                                 class="entypo-linkedin-circled"></span><span class="invisible">LinkedIn</span></a></li>
                 </ul>
-                <br />
             </div>
         </div>
         <!-- PROFILE CONTENT -->
         <div id="content_container">
             <div class="block">
-            <h1>A few words about me</h1>
-            <p>I'm passionate about speak and then hardworker and a fast-learner with a new technology.
-               I consider myself a tolerant and respectful person with open mind and quite honest...</p>
-          </div>
-          <div class="horizontal_line">
-            <div class="line_left"></div>
-            <div class="left_circle"></div>
-            <div class="central_circle"></div>
-            <div class="right_circle"></div>
-            <div class="line_right"></div>
-          </div>
+           <h1>A few words about me</h1>
+        <p>I'm passionate about speak and then hardworker and a fast-learner with a new technology.
+           I consider myself a tolerant and respectful person with open mind and quite honest...</p>
+      </div>
+      <div class="horizontal_line">
+        <div class="line_left"></div>
+        <div class="left_circle"></div>
+        <div class="central_circle"></div>
+        <div class="right_circle"></div>
+        <div class="line_right"></div>
+      </div>
             <div class="block">
-                <h2>Education Details</h2>
-                <p>B.TECH IT / 68% 
-                	<br/><br/>
-                	I have completed my degree on Anjalai Ammal Mahalingam Engineering  College in the year 2019  at Kovilvenni.
-                	<br/><br/>
-                	HSC / 80%
-                	<br/><br/>
-                	I have completed my schooling on St. Joseph’s. Girl’s. Hr. Sec. School in the year 2015 at Kumbakonam.
-					<br/><br/>
-					SSLC / 91%
- 					<br/><br/>
- 					I have completed my schooling on St. Joseph’s. Girl’s .Hr. Sec. School in the year 2013 at Kumbakonam.
+                <h2>Soft skill</h2>
+                <p>
+					 Languages      : C, Java
+                <br/><br/>
+					 Tools          : Visual Studio
+                <br/><br/>
+					 Database       :  MySql
+		        <br/><br/>
+					 Software Stack : MEAN , ASP.NET
 
-                </p>
+				</p>
             </div>
             <div class="horizontal_line">
                 <div class="line_left"></div>
@@ -150,10 +144,10 @@
                 </ul>
             </div>
         </div>
-        <!-- <div class="clear"></div> -->
+        <div class="clear"></div>
         <!-- FOOTER -->
         <div id="footer">
-            <p class="footer_name">Vinitha Nagarajan CV 2020</p>
+            <p class="footer_name">Javier Latorre CV 2015</p>
         </div>
     </div>
 </body>
