--- a/education.html
+++ b/education.html
@@ -25,9 +25,8 @@
             <div class="header_menu_container">
                 <div class="clear"></div>
                 <ul class="header_menu horizontal_list">
-                    <li><a class="no_border" href="./index.html">Profile</a></li>
+                    <li><a class="no_border" href="./index.html">Profile & Skills</a></li>
                     <li><a class="active" href="#">Education</a></li>
-                    <li><a href=" ./skills.html">Skills</a></li>
                     <li><a href="./mini-project.html">Mini Project</a></li>
                 </ul>
             </div>
@@ -76,7 +75,7 @@
         <!-- PROFILE CONTENT -->
         <div id="content_container">
             <div class="block">
-            <h1>A few words about me</h1>
+            <h2>A few words about me</h2>
             <p>I'm passionate about speak and then hardworker and a fast-learner with a new technology.
                I consider myself a tolerant and respectful person with open mind and quite honest...</p>
           </div>
@@ -152,8 +151,8 @@
         </div>
         <!-- <div class="clear"></div> -->
         <!-- FOOTER -->
-        <div id="footer">
-            <p class="footer_name">Vinitha Nagarajan CV 2020</p>
+        <div id="footer"><center>
+            <p class="footer_name">Vinitha Nagarajan CV 2020</p></center>
         </div>
     </div>
 </body>
