first updated resume

--- a/mini-project.html
+++ b/mini-project.html
@@ -76,7 +76,7 @@
     </div>
     <!-- PROFILE CONTENT -->
     <div id="content_container">
-      <div class="block">
+      <!--<div class="block">
         <h2>Objective</h2>
         <p>To continuously enhance my knowledge ,skills
           and experience by getting involved in challenging
@@ -90,7 +90,7 @@
         <div class="central_circle"></div>
         <div class="right_circle"></div>
         <div class="line_right"></div>
-      </div>
+      </div>-->
       <div class="block">
         <h2>A few words about me</h2>
         <p>I'm passionate about speak and then hardworker and a fast-learner with a new technology.
@@ -110,14 +110,20 @@
           This project is similar to social website, here we developed to make conversation among end-user with simple
           UI/UX.
           <br /><br />
-          Technologies used: Angular, Node.js, Express.js and MongoDB
+          Using: Angular, Node.js, Express.js and MongoDB
           <br /><br />
           <b>JOB APPLICATION</b>
           <br /><br />
           Form registration regarding to success mail notification for the user
           and the application owner.
           <br /><br />
-          Technologies used: Asp.Net, MySql
+          Using: Asp.Net, DB
+          <br /><br />
+          <b>WEIGHTLOSS WEB APPLICATION</b>
+          <br /><br />
+          User can register our workshop to enter our basic details and pay the money.
+          <br /><br />
+          Using: Html, DB, Node.js and Paytm
         </p>
       </div>
       <div class="horizontal_line">
@@ -165,8 +171,8 @@
     </div>
     <!-- <div class="clear"></div> -->
     <!-- FOOTER -->
-    <div id="footer">
-      <p class="footer_name">Vinitha Nagarajan CV 2020</p>
+    <div id="footer"><center>
+      <p class="footer_name">Vinitha Nagarajan CV 2020</p></center>
     </div>
   </div>
 </body>
