--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
     <!-- <div class="clear"></div> -->
     <!-- FOOTER -->
     <div id="footer">
-      <p class="footer_name">Vinitha Nagarajan CV 2020</p>
+      <center>
+      <p class="footer_name">Vinitha Nagarajan CV 2020</p></center>
     </div>
   </div>
 </body>
